# hsck

./: .gitignore  Cargo.toml  README.md  build.rs  hsck.bat
cfg/: default.toml  prod.toml
docs/: config_guide.md  usage.md
src/: cli.rs  logger.rs  main.rs
src/config/: app_config.rs  loader.rs  mod.rs  stu.rs
src/email/: email_sender.rs  mod.rs
src/utils/: mod.rs
