[package]
name = "hsck"
version = "0.2.0"
edition = "2021"
authors = ["https://github.com/iAeternus <1049469060@qq.com>"]
description = "Homework Submission ChecK"

[dependencies]
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.12"
anyhow = "1.0"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-rustls-tls", "rustls-tls"] }
clap = { version = "4.5.38", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"